fb button hidden behind navbar in mobile fix

--- a/css/desktop/storymap_desktop.css
+++ b/css/desktop/storymap_desktop.css
@@ -1,10 +1,11 @@
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 840px) {
     .footer__wrapper {
         border-top-style: solid;
-        border-width: 100%;
-        height: 100%;
+        border-width: 2px;
+        height: 100px;
         background-color: white;
         width: 100%;
+        margin-bottom: 0px;
     }
     .fb-button {
         display: flex;
@@ -19,7 +20,7 @@
         width: 100%;
         height: calc(100vh - 50px);
         z-index: 0;
-        padding-top: 120px;
+        padding-top: 100px;
     }
     .mapHolder {
         display: grid;
