--- a/css/mobile/storymap_mobile.css
+++ b/css/mobile/storymap_mobile.css
@@ -7,4 +7,64 @@
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  .footer__wrapper {
+    border-top-style: solid;
+    border-width: 2px;
+    height: 100px;
+    background-color: white;
+    width: 100%;
+    margin-bottom: 50px;
+    position: absolute;
+}
+.fb-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+}
+.footer__text {
+    text-align: center;
+    color: rgb(77,77,77);
+}
+
+#map {
+  width: 100%;
+  height: 100vh;
+  z-index: 0;
+  padding-top: 0px;
+  overflow: auto;
+}
+
+}
+
+@media only screen and (min-width: 480px) and (max-width: 840px){
+  #map {
+    width: 100%;
+    height: 100vh;
+    z-index: 0;
+    padding-top: 100px;
+    overflow: auto;
+}
+
+.footer__wrapper {
+  border-top-style: solid;
+  border-width: 2px;
+  height: 100px;
+  background-color: white;
+  width: 100%;
+  margin-bottom: 0px;
+}
+
+.fb-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+}
+
+.footer__text {
+  text-align: center;
+  color: rgb(77,77,77);
+}
 }
